// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders with default variant 1`] = `
<div>
  <div
    class="mat-badge"
  >
    Badge
  </div>
</div>
`;

exports[`Badge renders with destructive variant 1`] = `
<div>
  <div
    class="mat-badge mat-warn"
  >
    Badge
  </div>
</div>
`;

exports[`Badge renders with outline variant 1`] = `
<div>
  <div
    class="mat-badge"
  >
    Badge
  </div>
</div>
`;

exports[`Badge renders with secondary variant 1`] = `
<div>
  <div
    class="mat-badge mat-accent"
  >
    Badge
  </div>
</div>
`;
